--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,26 @@
 ---
-import Layout from '../layouts/Layout.astro';
-import Card from '../components/Card.astro';
+import Layout from "../layouts/Layout.astro";
+import Card from "../components/Card.astro";
+import PlayListItemCard from "@/components/PlayListItemCard.astro"
+import { playlists } from "@/lib/data";
 ---
 
-<Layout title="Spotify Clone"/>
+<Layout title="Spotify Clone" >
+<div
+  id="playlist-container"
+  class="relative transtion-all duration-1000 bg-green-600"
+>
 
+  <!-- <PageHeader /> -->
 
-<style>	</style>
+  <div class="relative z-10 px-6">
+    <!-- <Greetings /> -->
+    <h1 class="text-4xl">Buenos dias</h1>
+    {
+        playlists.map((playlist) => <PlayListItemCard playlist={playlist}/>)
+    }
+  </div>
+</div>
+</Layout>
+
+<style></style>
