--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,7 +1,7 @@
 ---
-import AsideMenu from "../components/AsideMenu.astro"
+import AsideMenu from "../components/AsideMenu.astro";
 interface Props {
-	title: string;
+  title: string;
 }
 
 const { title } = Astro.props;
@@ -9,42 +9,84 @@ const { title } = Astro.props;
 
 <!doctype html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="description" content="Astro description" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<title>{title}</title>
-	</head>
-	<body>
-		<div id="app" class="relative h-screen p-2 gap-2">
-			<aside class="[grid-area:aside] flex-col flex overflow-y-auto">
-				<AsideMenu />
-			</aside>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="description" content="Astro description" />
+    <meta name="viewport" content="width=device-width" />
+    <link rel="icon" type="image/svg+xml" href="/public/favicon.svg" />
+    <meta name="generator" content={Astro.generator} />
+    <title>{title}</title>
+  </head>
+  <body>
+    <div id="app" class="relative h-screen p-2 gap-2">
+      <aside class="[grid-area:aside] flex-col flex overflow-y-auto">
+        <AsideMenu />
+      </aside>
+      
+        <main class="[grid-area:main] rounded-lg bg-zinc-900 overflow-y-auto w-full">
+          <slot />
+        </main>
 
-			<main class="[grid-area:main] rounded-lg overflow-y-auto"></main>
+      <footer class="[grid-area:player] min-h-[100px]"></footer>
+    </div>
+  </body>
 
-			<footer class="[grid-area:player] min-h-[100px]"></footer>
-			<slot />
-		</div>
-		
-	</body>
+  <style>
+    #app {
+      display: grid;
+      grid-template-areas:
+        "aside main main"
+        "player player player";
+      grid-template-columns: 350px 1fr;
+      grid-template-rows: 1fr auto;
+    }
+  </style>
+
+  <style is:global>
+    html {
+      font-family: "CircularStd", system-ui, sans-serif;
+      background: #010101;
+      color: white;
+    }
+
+    @font-face {
+      font-family: "CircularStd";
+      src: url("/public/fonts/CircularStd-Medium.woff2") format("woff2");
+      font-weight: 500;
+      font-style: normal;
+      font-display: swap;
+    }
+
+    @font-face {
+      font-family: "CircularStd";
+      src: url("/public/fonts/CircularStd-Book.woff2") format("woff2");
+      font-weight: 400;
+      font-style: normal;
+      font-display: swap;
+    }
+
+    @font-face {
+      font-family: "CircularStd";
+      src: url("/public/fonts/CircularStd-Light.woff2") format("woff2");
+      font-weight: 300;
+      font-style: normal;
+      font-display: swap;
+    }
+
+    @font-face {
+      font-family: "CircularStd";
+      src: url("/public/fonts/CircularStd-Bold.woff2") format("woff2");
+      font-weight: 700;
+      font-style: normal;
+      font-display: swap;
+    }
+
+    @font-face {
+      font-family: "CircularStd";
+      src: url("/public/fonts/CircularStd-Black.woff2") format("woff2");
+      font-weight: 900;
+      font-style: normal;
+      font-display: swap;
+    }
+  </style>
 </html>
-<style>
-	#app{
-		display: grid;
-		grid-template-areas: 
-		"aside main main"
-		"player player player";
-		grid-template-columns: 350px 1fr;
-		grid-template-rows: 1fr auto;
-	}
-</style>
-
-<style is:global>
-	html {
-		font-family: system-ui, sans-serif;
-		background: #000;
-	}
-</style>
